--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "pyreshut"
-version = "1.0"
+version = "1.1"
 authors = [
  { name="ViCoder32", email="x.daahome@gmail.com" },
 ]
-description = "In readme"
+description = "Shutdown or Reboot you machine with one function"
 readme = "README.md"
 requires-python = ">=3.10.0"
 classifiers = [
